Update image hrefs to reflect proper location

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud image">
+      <img class="top-cloud" src="cloud.png" alt="cloud image">
       <h1>I'm Andrea.</h1>
       <h2>a programmer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-      <img class="mountain" src="images/mountain.png" alt="mountain image">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud image">
+      <img class="mountain" src="mountain.png" alt="mountain image">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile-photo" src="images/andrea-1.png" alt="andrea gibbens profile photo">
+        <img class="profile-photo" src="andrea-1.png" alt="andrea gibbens profile photo">
         <h2>Hello.</h2>
         <p class="about-me">I am a Conservation Biologist and Junior-Level <b><a href="#">Web Developer</a></b>. I am a fourth-year professional in the natural resources field who is actively expanding my skillset in the technology realm.</p>
       </div>
@@ -25,12 +25,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="skill-1" src="images/code.png" alt="hello world gif">
+          <img class="skill-1" src="code.png" alt="hello world gif">
           <h3>Coding</h3>
           <p>I have enjoyed coding and designing websites from the age of 13. I have recently revisited the skill and learned to code in HTML, CSS, JavaScript, and Python.</p>
         </div>
         <div class="skill-row">
-          <img class="skill-2" src="images/excercise.png" alt="yoga lotus pose image">
+          <img class="skill-2" src="excercise.png" alt="yoga lotus pose image">
           <h3>Yoga</h3>
           <p class="yoga-skill-description">I have been practicing yoga regularly for over ten years. I have attended several diverse studios and online programs. I have also assisted in checking in clients and general studio upkeep at a local yoga studio.</p>
         </div>
